ws-slo/apps/synapse/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: synapse
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: network.speed.2.5g
                    operator: In
                    values:
                      - "true"
              weight: 50
      containers:
        - name: synapse
          livenessProbe:
            failureThreshold: 15
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 150
            periodSeconds: 30
            timeoutSeconds: 30
          readinessProbe:
            failureThreshold: 15
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 80
            periodSeconds: 20
            timeoutSeconds: 20
          startupProbe:
            failureThreshold: 180
            httpGet:
              port: https
              scheme: HTTPS
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 15
